# pyCCV

./: .gitignore  LICENSE  README.md  __init__.py  config.py  launch_pyCCV.bat  main.py  pyproject.toml  requirements.txt  venv_setup.bat
core/: __init__.py  filters.py  interpolation.py  piv_fft.py  piv_fft_parallel.py  postprocess.py  smooth.py
docs/superpowers/plans/: 2026-04-04-pyside6-ui-architecture-implementation-plan.md
services/: analysis.py  convert_service.py  logger.py  settings.py  settings_validation.py  viewer_files.py  vorticity.py
shared/: __init__.py  io_formats.py  settings_json.py
tests/: conftest.py  test_analysis_bench_smoke.py  test_analysis_export_behavior.py  test_analysis_lifecycle.py  test_analysis_validation.py  test_controller_flow.py  test_core_parity.py  test_filters.py  test_logging.py  test_plot_presenter.py  test_settings.py  test_settings_validation.py  test_subpixel.py  test_ui_smoke.py  test_viewer_presenter.py  test_viewer_tab.py
ui/: _card_helper.py  app.py  controller.py  convert_view_controller.py  logging_qt.py  plot_presenter.py  streamline_manager.py  style.py  tokens.py  viewer_presenter.py  viewer_view_controller.py  widgets.py
ui/components/: directory_picker.py
ui/tabs/: basic_settings.py  convert.py  piv_settings.py  viewer.py
utils/: __init__.py  file_checker.py  file_io.py
