[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCCV"
version = "2.0.0"
description = "Python PIV 分析工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "Pillow>=9.0",
    "PySide6-Essentials>=6.6",
    "matplotlib>=3.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pyCCV = "main:main"
